tests/error/comprehension_errors/pattern_override1.err
Error: Drop violation (at $FILE:8:18)
  | 
6 | @guppy
7 | def foo(qs: list[tuple[qubit, qubit]] @owned) -> list[qubit]:
8 |     return [q for q, q in qs]
  |                   ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
